--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -1,18 +1,36 @@
 {
-  "name": "my_app_backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "my_app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "redis": "^4.6.8"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
